# rdesk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.rdesk-server  README.md
crates/rdesk_bridge/: Cargo.toml
crates/rdesk_bridge/src/: lib.rs  state.rs
crates/rdesk_bridge/src/api/: chat.rs  connection.rs  device.rs  file_transfer.rs  mod.rs  session.rs  settings.rs
crates/rdesk_common/: Cargo.toml  build.rs
crates/rdesk_common/src/: bytes_codec.rs  config.rs  device_id.rs  lib.rs  password.rs  platform.rs
crates/rdesk_core/: Cargo.toml
crates/rdesk_core/src/: chat.rs  client.rs  clipboard.rs  file_transfer.rs  input.rs  lib.rs  server.rs  session.rs
crates/rdesk_core/src/capture/: desktop.rs  mod.rs
crates/rdesk_core/src/codec/: mod.rs  vpx.rs
crates/rdesk_crypto/: Cargo.toml
crates/rdesk_crypto/src/: auth.rs  keypair.rs  lib.rs  noise.rs  session_key.rs
crates/rdesk_net/: Cargo.toml
crates/rdesk_net/src/: lib.rs
crates/rdesk_net/src/p2p/: hole_punch.rs  mod.rs  nat_detect.rs  stun.rs
crates/rdesk_net/src/quic/: client.rs  mod.rs  server.rs  stream.rs
crates/rdesk_net/src/relay/: client.rs  mod.rs
crates/rdesk_net/src/rendezvous/: client.rs  mod.rs
crates/rdesk_server/: Cargo.toml
crates/rdesk_server/src/: main.rs
deploy/: README.md  nginx.rdesk-server.conf  rdesk-server.service
flutter_client/: README.md  build_install.sh  pubspec.yaml
flutter_client/android/: build.gradle.kts  settings.gradle.kts
flutter_client/android/app/: build.gradle.kts
flutter_client/ios/: setup_broadcast_extension.rb
flutter_client/ios/BroadcastExtension/: BroadcastExtension.entitlements  Info.plist  SampleHandler.swift
flutter_client/ios/Flutter/: Generated.xcconfig
flutter_client/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist  SceneDelegate.swift
flutter_client/ios/Runner.xcodeproj/: project.pbxproj
flutter_client/ios/Shared/: FrameShared.swift
flutter_client/lib/: app.dart  main.dart
flutter_client/lib/src/models/: account.dart  address_book.dart  chat_message.dart  connection_info.dart  device.dart  file_entry.dart  session.dart  trusted_peer.dart
flutter_client/lib/src/providers/: address_book_provider.dart  android_host_provider.dart  auth_provider.dart  chat_provider.dart  connection_provider.dart  desktop_host_provider.dart  file_transfer_provider.dart  session_provider.dart  settings_provider.dart
flutter_client/lib/src/screens/: account_auth_screen.dart  address_book_screen.dart  chat_screen.dart  cloud_devices_screen.dart  connection_log_screen.dart  connection_settings_screen.dart  device_detail_screen.dart  file_manager_screen.dart  gesture_guide_screen.dart  home_screen.dart  mobile_host_screen.dart  my_devices_screen.dart  profile_screen.dart  remote_assist_screen.dart  remote_desktop_screen.dart  settings_screen.dart  shortcut_guide_screen.dart  unattended_setup_screen.dart
flutter_client/lib/src/services/: android_host_service.dart  desktop_host_service.dart  rdesk_bridge_service.dart
flutter_client/lib/src/utils/: constants.dart  platform_util.dart  router.dart  theme.dart
flutter_client/lib/src/widgets/: account_auth_dialog.dart  connection_timer.dart  desktop_viewer_layout.dart  desktop_viewer_sidebar.dart  desktop_viewer_top_bar.dart  device_id_display.dart  file_list_tile.dart  incoming_connection_dialog.dart  main_shell.dart  mobile_host_control_panel.dart  remote_canvas.dart  (+2 more)
flutter_client/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_client/macos/Runner/: MainFlutterWindow.swift
flutter_client/macos/Runner.xcodeproj/: project.pbxproj
flutter_client/test/: widget_test.dart
flutter_client/windows/: CMakeLists.txt
flutter_client/windows/runner/: Runner.rc  main.cpp
proto/: message.proto  rendezvous.proto
scripts/: reinstall_ios.sh
skills/rdesk-code-review/: SKILL.md
(+12 files in other folders)
