[workspace]
resolver = "2"
members = [
    "crates/rdesk_common",
    "crates/rdesk_crypto",
    "crates/rdesk_net",
    "crates/rdesk_core",
    "crates/rdesk_bridge",
    "crates/rdesk_server",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"
bytes = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
