[package]
name = "rdesk_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
rdesk_common = { path = "../rdesk_common" }
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
zeroize = "1"
