[package]
name = "rdesk_net"
version = "0.1.0"
edition = "2021"

[dependencies]
rdesk_common = { path = "../rdesk_common" }
rdesk_crypto = { path = "../rdesk_crypto" }
tokio = { workspace = true }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
bytes = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
