[package]
name = "rdesk_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdesk-server"
path = "src/main.rs"

[dependencies]
rdesk_common = { path = "../rdesk_common" }
rdesk_crypto = { path = "../rdesk_crypto" }
rdesk_net = { path = "../rdesk_net" }
tokio = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
